# py-opinion

./: .devcontainer.json  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
all/: index.html
docs/: all.md  test.ipynb
opinion/: __init__.py  midict.py
tests/: test_version.py
