[tool.poetry]
name = "opinion"
version = "0.0.0"
description = "A clean, automated setup for publishing simple Python packages to PyPI using Poetry and GitHub Actions."
authors = ["Peter Yuen <ppeetteerrsx@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ppeetteerrs/opinion"
repository = "https://github.com/ppeetteerrs/opinion"
documentation = "https://ppeetteerrs.github.io/opinion"
keywords = []

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.3.0"
pandas = "^1.4.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mkdocs-material = "^8.2.5"
mkdocs-jupyter = "^0.20.1"
ipykernel = "^6.9.2"
mkdocstrings-python = "^0.6.6"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.poetry.scripts]
test = "opinion:__test"
serve = "opinion:__serve"
docs = "opinion:__docs"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
